<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account"/>
        <item android:id="@+id/email"
            android:icon="@drawable/ic_baseline_alternate_email_24"
            android:title="@string/emailss"/>
        <item android:id="@+id/money"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/money"/>
        <item android:id="@+id/password"
            android:icon="@drawable/ic_baseline_lock_24"
            android:title="@string/passwords"/>
        <item android:id="@+id/location"
            android:icon="@drawable/ic_baseline_room_24"
            android:title="@string/location"/>

        <item android:title="@string/user">
            <menu >
                <group android:checkableBehavior="single">
                    <item android:id="@+id/home"
                        android:icon="@drawable/home"
                        android:title="@string/home"/>
                    <item android:id="@+id/log"
                        android:icon="@drawable/log"
                        android:title="@string/logg"/>
                    <item android:id="@+id/back"
                        android:icon="@drawable/ic_baseline_keyboard_backspace_24"
                        android:title="@string/back"/>
                </group>

            </menu>
        </item>



    </group>
</menu>