<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    tools:context=".activity.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_keyboard_backspace_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/teal_700"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="user name"
            app:startIconContentDescription="account"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:helperText="Password"
            app:startIconContentDescription="Password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="14sp"
            android:textColor="@color/teal_200"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/> <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/> <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_login"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:background="@color/rasbery"
            app:icon="@drawable/ic_baseline_login_24"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"/>
            <Button
                android:id="@+id/outlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                app:icon="@drawable/google"
                android:textSize="16sp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                />

        </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal|center_vertical|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>